--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 .images{
-    height: 100%;
+    height: 110%;
     width: 100%;
     margin:0;
     padding: none;
-    background-size: cover;
-    object-fit: cover;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    object-fit: auto;
     background-image:
     linear-gradient(to left, rgba(190, 207, 204, 0.26), rgb(22, 21, 22)),
-    url('./img/team.jpg');
+    url('./img/cer.jpg');
   }
 
 .cont{
@@ -21,4 +22,18 @@
     border-color: black;
     padding-left: 18%;
     padding-top: 10%;
+}
+
+#body{
+    background-size: auto;
+    
+  }
+
+.txt{
+
+    font-family: 'Anton', sans-serif;
+font-family: 'Rajdhani', sans-serif;
+font-weight: 200;
+color:white ;
+
 }
